--- a/src/app/components/heroebio/heroebio.component.html
+++ b/src/app/components/heroebio/heroebio.component.html
@@ -1,3 +1,22 @@
-<p>
-  heroebio works!
-</p>
+<h1>{{heroe.nombre}} <small>({{heroe.aparicion}})</small></h1>
+<hr>
+<div class="row">
+
+    <div class="col-row-md-4">
+        <img src="{{heroe.img}}" class="img-fluid" alt="name heroe">
+        <br>
+        <a [routerLink]="['/heroes']" class="btn btn-danger">Regresar</a>
+    </div>
+    <div class="col-md-8">
+        <h3>{{heroe.nombre}}</h3>
+        <hr>
+        <p>
+            {{heroe.bio}}
+        </p>
+    </div>
+    <div>
+        <img src="assets/img/dc.png" alt="" *ngIf="heroe.casa == 'DC'">
+        <img src="assets/img/marvel.png" alt="" *ngIf="heroe.casa == 'Marvel'">
+    </div>
+
+</div>
