--- a/src/app/components/heroebio/heroebio.component.html
+++ b/src/app/components/heroebio/heroebio.component.html
@@ -7,6 +7,9 @@
         <br>
         <a [routerLink]="['/heroes']" class="btn btn-danger">Regresar</a>
     </div>
+    
+</div>
+<div class="row">
     <div class="col-md-8">
         <h3>{{heroe.nombre}}</h3>
         <hr>
@@ -18,5 +21,4 @@
         <img src="assets/img/dc.png" alt="" *ngIf="heroe.casa == 'DC'">
         <img src="assets/img/marvel.png" alt="" *ngIf="heroe.casa == 'Marvel'">
     </div>
-
 </div>
