--- a/src/app/components/heroebio/heroebio.component.html
+++ b/src/app/components/heroebio/heroebio.component.html
@@ -1,13 +1,11 @@
-<h1>{{heroe.nombre}} <small>({{heroe.aparicion}})</small></h1>
+<h1>{{heroe.nombre | uppercase }} <small>({{heroe.aparicion | date:'y'}})</small></h1>
 <hr>
 <div class="row">
-
     <div class="col-row-md-4">
-        <img src="{{heroe.img}}" class="img-fluid" alt="name heroe">
+        <img src="{{heroe.img}}" class="img-fluid" [alt]=heroe.bio>
         <br>
         <a [routerLink]="['/heroes']" class="btn btn-danger">Regresar</a>
     </div>
-    
 </div>
 <div class="row">
     <div class="col-md-8">
