--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -19,9 +19,9 @@
             </li>
 
         </ul>
-        <form class="form-inline my-2 my-lg-0 ">
-            <input class="form-control mr-sm-2 " type="search " placeholder="Search " aria-label="Search ">
-            <button class="btn btn-outline-success my-2 my-sm-0 " type="submit ">Search</button>
-        </form>
+        <div class="form-check-inline">
+            <input class="form-control mr-sm-2 " type="search " placeholder="heroe..." aria-label="Search " #buscarTexto (keyup.enter)="buscarHeroe(buscarTexto.value)">
+            <button (click)="buscarHeroe(buscarTexto.value)" class="btn btn-outline-success my-2 my-sm-0 ">Buscar Heroe</button>
+        </div>
     </div>
 </nav>
